Accordion Result: Add width to prevent overflow in IE11

--- a/src/ui/sass/modules/_AccordionResult.scss
+++ b/src/ui/sass/modules/_AccordionResult.scss
@@ -96,6 +96,11 @@
     transition: transform 400ms ease-in;
   }
 
+  &-indicatorWrapper
+  {
+    width: 100%;
+  }
+
   &-toggle
   {
     padding-top: $base-spacing / 2;
